# cl_server_sdk_python

./: .gitignore  INTERNALS.md  README.md  REVIEW.md  ReviewRequest.md  TEST_AUTOMATION_README.md  plan.md  profile_perf.py  pyproject.toml  pyrightconfig.json  run_all_tests.sh  run_face_detection_test.sh  task.md  tests_list.txt
example/: CLI_TEST_RESULTS.md  README.md  VERIFICATION_RESULTS.md  pyproject.toml
example/src/cl_client_cli/: __init__.py  main.py
example/tests/: README.md  __init__.py  conftest.py  test_cli.py
src/cl_client/: __init__.py  auth.py  auth_client.py  auth_models.py  compute_client.py  config.py  exceptions.py  http_utils.py  intelligence_models.py  models.py  mqtt_monitor.py  server_config.py  server_pref.py  session_manager.py  store_client.py  store_manager.py  store_models.py  types.py
src/cl_client/plugins/: __init__.py  base.py  clip_embedding.py  dino_embedding.py  exif.py  face_detection.py  face_embedding.py  hash.py  hls_streaming.py  image_conversion.py  media_thumbnail.py
src/cl_client/utils/: __init__.py  cl_admin.py
tests/: QUICK.md  README.md  auth_config.json  conftest.py  repeat_run.sh  repeat_run_rpi.sh  test_compute_client_auth.py  test_utils.py
tests/integration/: test_store_multimedia.py
tests/media/: MEDIA_SETUP.md
tests/test_client/: test_auth.py  test_auth_client.py  test_auth_models.py  test_compute_client.py  test_config.py  test_exceptions.py  test_models.py  test_mqtt_monitor.py  test_plugins.py  test_server_config.py  test_server_pref.py  test_session_manager.py  test_store_client.py  test_store_client_errors.py  test_store_manager.py  test_store_manager_errors.py  test_store_models.py
tests/test_integration/: README.md  __init__.py  conftest.py  test_auth_errors_integration.py  test_clip_embedding_integration.py  test_concurrency_integration.py  test_dino_embedding_integration.py  test_exif_integration.py  test_face_detection_integration.py  test_face_embedding_integration.py  test_full_embedding_flow.py  test_hash_integration.py  test_hls_streaming_integration.py  test_image_conversion_integration.py  test_intelligence_integration.py  test_m_insight_batch_integration.py  test_m_insight_integration.py  test_media_thumbnail_integration.py  test_store_advanced_integration.py  test_store_integration.py  test_store_ml_integration.py  test_system_integration.py  test_timeout_fix_verification.py  test_user_management_integration.py  test_utils.py
