[project]
name = "cl-client-cli"
version = "0.1.0"
description = "Command-line interface for CL Client compute library"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "../LICENSE" }
authors = [
    {name = "Ananda Sarangaram"}
]
dependencies = [
    "cl-client",                 # The library we built (configured in tool.uv.sources)
    "click>=8.1.0",              # CLI framework
    "rich>=13.0.0",              # Rich terminal output
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
all = [
    "cl-client-cli[dev]",
]

[project.scripts]
cl-client = "cl_client_cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
cl-client = { path = "..", editable = true }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cl_client_cli"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "--cov=cl_client_cli --cov-report=html --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
source = ["src/cl_client_cli"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "numpy>=2.4.0",
]
